<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dip">
	    
		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:weightSum="1">
		    <EditText
		    	android:layout_weight=".25"
		        android:id="@+id/search"
		        android:hint="@string/search_hint"
		        android:layout_width="fill_parent"
		        android:layout_height="match_parent" />
		    <Button android:id="@+id/fetch"
		    	android:text="@string/search_button"
		    	android:layout_width="fill_parent"
		    	android:layout_weight=".75"
		    	android:layout_height="match_parent" />
		</LinearLayout>
		
	    <CheckBox
	        android:id="@+id/search_in_descriptions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search_in_descriptions"
	        android:gravity="center" />
	</LinearLayout>
	<!-- old information section -->
	<!-- <TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/info_header"
	    android:gravity="center"
	    android:layout_marginTop="15dip"
	    android:textSize="16dip" />
	<ScrollView
		android:scrollbarAlwaysDrawVerticalTrack="true"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="1.0"
	    android:layout_margin="5dip"
	    android:padding="10dip"
	    android:background="@drawable/border">
	   <TextView
	   	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text="@string/info" />
	</ScrollView> -->
	
	<LinearLayout
		android:id="@+id/main_utorrent_not_set_up"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dip"
		android:orientation="horizontal"
		android:padding="10dip"
		android:background="@drawable/border">
		<ImageView
			android:src="@drawable/stat_sys_warning"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" />
		<TextView 
			android:text="@string/main_utorrent_not_set_up"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<Button
			android:id="@+id/open_settings"
			android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:visibility="gone"
		    android:text="@string/menu_settings"  />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>
